# dascript-demo

./: CMakeLists.txt  hello.das  main-C.c  main.cpp
